--- a/Milestone-1/assets/css/style.css
+++ b/Milestone-1/assets/css/style.css
@@ -1,3 +1,12 @@
+/* #region-------------utilities */
+.dashed{
+    border: 1px dashed yellow;
+}
+/* #endregion-------------utilities */
+
+
+
+
 body{
     background-color: black;  
     width: 100vw;
@@ -11,6 +20,9 @@ main{
     margin: auto;
     background-color: bisque;
 }
+
+
+/* #region-------------sidebar */
 .sidebar{
     width: 18rem;
     background-color: aqua;
@@ -22,31 +34,53 @@ main{
 .notifications,
 .search_box{
     min-height: 3rem;
-    border: 1px dashed black;
+    padding: .25rem;
+    border: 1px solid black;
 }
 .contacts{
     flex-grow: 1;
-    border: 1px dashed black;
     overflow-y: auto;
+    padding: .25rem;
+    border: 1px solid black;
+
 }
+::-webkit-scrollbar {
+    width: 5px;
+}
+::-webkit-scrollbar-track {
+    background:gray; 
+}
+::-webkit-scrollbar-thumb {
+    background: white; 
+}
+::-webkit-scrollbar-thumb:hover {
+    background: black; 
+}
+/* #endregion-------------sidebar */
 
 
 
+/* #endregion-------------right big bar */
 
-.right_bar{
+.right_big_bar{
     width: calc(100% - 18rem);
-    background-color:cadetblue;
     height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 .message_container{
-    width: 100%;
-    height: calc(100% - 3rem);
+    flex-basis: 5rem;
+    flex-grow: 1;
     background-color: blueviolet;
+    overflow-y: auto;
 }
-.bottom-bar{
-    width: 100%;
-    height: 3rem;
-    background-color: blueviolet;
+.bottom_bar{
+    flex-basis: 4rem;
+    background-color:rgb(0, 123, 255);
+}
+.top_bar{
+    flex-basis: 4rem;
+    background-color:rgb(0, 123, 255);
 }
 
 
