--- a/Milestone-1/assets/css/style.css
+++ b/Milestone-1/assets/css/style.css
@@ -1,7 +1,24 @@
+
+
+
+
 /* #region-------------utilities */
+:root{
+    --bg--dark-green: #033B3D;
+    --bg--green: #0D4A3A;
+    --bg--light-green: #2D5731;
+    --bg--very-light-green: #99b543;
+    --bg--gold: #7B6823;
+}
 .dashed{
     border: 1px dashed yellow;
 }
+.text_small{
+    font-size: .75rem;
+}
+/* .text_small{
+    font-size: .rem;
+} */
 /* #endregion-------------utilities */
 
 
@@ -10,7 +27,8 @@
 body{
     background-color: black;  
     width: 100vw;
-    height: 100vh;  
+    height: 100vh; 
+    color: white; 
 }
 
 main{
@@ -18,21 +36,24 @@ main{
     height: calc(100vh - 10rem);
     max-height: 100%;
     margin: auto;
-    background-color: bisque;
 }
 
 
 /* #region-------------sidebar */
 .sidebar{
     width: 18rem;
-    background-color: aqua;
+    background-color: var(--bg--dark-green);
     height: 100%;
     display: flex;
     flex-direction: column;
 }
+.notifications{
+    background-color: var(--bg--light-green);
+}
 .my_profile,
 .notifications,
 .search_box{
+    height: 3.5rem;
     min-height: 3rem;
     padding: .25rem;
     border: 1px solid black;
@@ -42,7 +63,7 @@ main{
     overflow-y: auto;
     padding: .25rem;
     border: 1px solid black;
-
+    background-color: var(--bg--light-green);
 }
 ::-webkit-scrollbar {
     width: 5px;
@@ -71,16 +92,17 @@ main{
 .message_container{
     flex-basis: 5rem;
     flex-grow: 1;
-    background-color: blueviolet;
+    background-color: var(--bg--very-light-green);
     overflow-y: auto;
+    color:black;
 }
 .bottom_bar{
     flex-basis: 4rem;
-    background-color:rgb(0, 123, 255);
+    background-color:var(--bg--gold);
 }
 .top_bar{
     flex-basis: 4rem;
-    background-color:rgb(0, 123, 255);
+    background-color:var(--bg--gold);
 }
 
 
