--- a/Milestone-1/assets/css/style.css
+++ b/Milestone-1/assets/css/style.css
@@ -65,6 +65,13 @@ main{
     border: 1px solid black;
     background-color: var(--bg--light-green);
 }
+.single_contact{
+    height: 4rem;
+    border: 1px solid black;
+}
+.single_contact img{
+    max-height: 100%;
+}
 ::-webkit-scrollbar {
     width: 5px;
 }
