--- a/Milestone-1/assets/css/style.css
+++ b/Milestone-1/assets/css/style.css
@@ -109,8 +109,13 @@ main{
     background-color:var(--bg--gold);
 }
 .top_bar{
-    flex-basis: 4rem;
     background-color:var(--bg--gold);
+}
+.top_bar img{
+    max-height: 100%;
+}
+.fa-paperclip{
+    rotate: 90deg;
 }
 
 
