--- a/Milestone-1/assets/css/style.css
+++ b/Milestone-1/assets/css/style.css
@@ -48,11 +48,12 @@ main{
     flex-direction: column;
 }
 .notifications{
-    background-color: var(--bg--light-green);
+    background-color: lightgreen;
+    color: black;
 }
-.my_profile,
-.notifications,
-.search_box{
+.sidebar .my_profile,
+.sidebar .notifications,
+.sidebar .search_box{
     height: 3.5rem;
     min-height: 3rem;
     padding: .25rem;
@@ -63,12 +64,13 @@ main{
     overflow-y: auto;
     padding: .25rem;
     border: 1px solid black;
-    background-color: var(--bg--light-green);
+    background-color: lightgreen;
 }
 .single_contact{
     height: 4rem;
     border: 1px solid black;
     border-radius: .5rem;
+    background-color: var(--bg--dark-green);
 }
 .single_contact img{
     max-height: 100%;
@@ -98,15 +100,30 @@ main{
     flex-direction: column;
 }
 .message_container{
+    background-image: url(../img/mine_dark.jpg);
     flex-basis: 5rem;
     flex-grow: 1;
-    background-color: var(--bg--very-light-green);
     overflow-y: auto;
-    color:black;
+    border: 1px solid black;    
+}
+.message_container>.received{
+    align-self: flex-start;
+    background-color: lightgreen;
+}
+.message_container>.sent{
+    align-self: flex-end;
+    background-color: lightyellow;
+}
+.message_container>.sent,
+.message_container>.received{
+    max-width:18rem;
+    margin: 1rem;
+    padding: .25rem;
+    color: black;
 }
 .bottom_bar{
-    flex-basis: 4rem;
     background-color:var(--bg--gold);
+    border: 1px solid black;    
 }
 .top_bar{
     background-color:var(--bg--gold);
@@ -116,6 +133,10 @@ main{
 }
 .fa-paperclip{
     rotate: 90deg;
+}
+.right_big_bar .top_bar .contact_profile{
+    height: 3.5rem;
+    border: 1px solid black;
 }
 
 
