--- a/Milestone-4&5/assets/css/style.css
+++ b/Milestone-4&5/assets/css/style.css
@@ -120,6 +120,9 @@ main{
     overflow-y: auto;
     border: 1px solid black;    
 }
+.message_container i{
+    color: gray;
+}
 .message_container ul .received{
     align-self: flex-start;
     background-color: lightgreen;
